# autocomod

./: .gitignore  README.md  pyproject.toml
autocomod/: graphs_dataset.py  logger.py  settings.py
autocomod/graph_nn/: __init__.py  classifier.py  contrastive_loss.py  encoder.py  metrics.py  modularisation_pipeline.py  module_classification_pipeline.py  pipeline.py  projector.py
autocomod/parsers/: __init__.py  extraction_parser.py  init_filter.py  pyg_parser.py  repo_parser.py
scripts/: fetch_repos.py  process_extractions.py  process_pyg_data.py  process_repos.py  train_gnn.py  train_gnn_modularisation.py  train_gnn_module_classification.py
tests/: test_init_filter.py  test_repo_parser.py
