[project]
name = "autocomod"
version = "0.0.0"
description = "Automated Code Modularisation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "networkx>=3.6",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "black==25.9.0",
    "pytest>=8.0.0",
]
data = [
    "gitpython>=3.1.45",
    "jedi>=0.19.2",
]
all = [
    "autocomod[dev]",
    "autocomod[data]",
]
